# Whisper-Finetune

./: .gitignore  AGENTS.md  README.md  alignment_heads.py  build_nemo_from_youtube_captions.py  convert-ggml.py  convert_hf_whisper_to_openai.py  dowload.py  evaluation.py  finetune.py  ids.txt  merge_lora.py  predownload_datasets.py  requirements.txt  run-eval.sh  run-full-2.sh  run-full.sh  run.sh  run_full.sh  tokenize.sh  transcribe_single.py
configs/: accelerate-single.yaml  accelerate.yaml  augmentation.json  datasets-2.json  datasets.json
metrics/: cer.py  wer.py
nemo/: README.md  check_dataset.py  datasets.json  datasets2.json  debug_dataset.py  dedup_hash.py  install_uzbek_dic  prepare_dataset.py  prepare_nemo_dataset.py  prepare_noise.py  prepare_tokenizer.py  prepare_tokenizer_text.py  rank_bad_labels.py  requirements.txt  set_cache_env.sh  speech_to_text_rnnt_bpe.py  test_checkpoint.py  tokenize.sh  train-2.yaml  train-realtime-2.yaml  train-realtime.yaml  train.sh  train.yaml  transcribe_and_slice.py  utils.py
tools/: enhance_phone_call_audio.py
utils/: audio_augmentation.py  callback.py  data_utils.py  logits_processors.py  model_utils.py  pre_download_datasets.py  reader.py  tsv_parser.py  validate_dataset.py
youtube/: README.md  cookies.txt  ids.txt  pyproject.toml
youtube/src/youtube_hf_dataset/: captions.py  cli.py  download.py  ids.py  models.py  pipeline.py  segment.py  utils.py
youtube/src/youtube_hf_dataset.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
youtube/tests/: test_captions.py  test_segment.py
(+10 files in other folders)
