[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "youtube-hf-dataset"
version = "0.1.0"
description = "Build a Hugging Face audio dataset from YouTube IDs and caption timing"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Whisper-Finetune"}]
dependencies = [
  "yt-dlp>=2024.8.6"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
youtube-hf-dataset = "youtube_hf_dataset.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
